fix image alignment

--- a/frontend/styles/index-details.css
+++ b/frontend/styles/index-details.css
@@ -42,6 +42,7 @@
   font-size: 18px;
   margin-left: 5px;
   margin-right: 5px;
+  padding-bottom: 30px;
 }
 
 .detail_text2 {
